# tg2

./: .dockerignore  .env.example  .env.symphony.example  .gitignore  AGENTS.md  Dockerfile  README.md  WORKFLOW.md  docker-compose.yml  pyproject.toml
app/: __init__.py  ai.py  api.py  bot.py  bot_runner.py  character_engine.py  config.py  db.py  decision_engine.py  main.py  models.py  proxy.py  proxy_manager.py  repositories.py  scheduler.py  schemas.py  services.py  telegram_client.py
docs/: codex.md
docs/superpowers/plans/: 2026-03-14-account-menu-actions.md
docs/superpowers/specs/: 2026-03-14-account-menu-actions-design.md  2026-03-14-codex-local-config-design.md
scripts/: deploy.ps1  deploy.sh  run-symphony.cmd  run-symphony.ps1
tests/: test_ai.py  test_bot.py  test_decision_engine.py  test_decodo_proxy_manager.py  test_proxy.py  test_services.py
